--- a/profile.html
+++ b/profile.html
@@ -1,16 +1,52 @@
 <div align="center">
-    <img src="https://res.cloudinary.com/dfcd64nhm/image/upload/v1666758357/Arquihub/paracv_sdowlv.jpg" alt="profile" width="200">
+    <img
+      src="https://res.cloudinary.com/dfcd64nhm/image/upload/v1666758357/Arquihub/paracv_sdowlv.jpg"
+      alt="profile"
+      width="200"
+    />
     <h1 align="center">Hi, I am Luciano Balbiano</h1>
     <h2 align="center">Fullstack Developer</h2>
-    <h3 align="center">Passionate about technology, creative and with innovative ideas. Ease to lead groups and improve their performance. I am also passionate about video games and I am open to learning any kind of activity related to them. I feel that I am realizing a unique idea in https://arquihub.vercel.app/.
-
-        If you have any questions please contact me to my email:
-        balbiano06@gmail.com
-        Thanks for your time!
-        
-        Apasionado por la tecnología, creativo y con ideas innovadoras. Facilidad para liderar grupos y mejorar el rendimiento de los mismos. Me apasionan también los videojuegos y estoy abierto a aprender cualquier tipo de actividad relacionada. Siento que estoy realizando una idea única en https://arquihub.vercel.app/.
-        
-        Ante cualquier consulta mi email es:
-        balbiano06@gmail.com
-        Gracias por tu tiempo!</h3>
-</div>
+    <h3 align="center">
+      Passionate about technology, creative and with innovative ideas. Ease to
+      lead groups and improve their performance. I am also passionate about video
+      games and I am open to learning any kind of activity related to them. I feel
+      that I am realizing a unique idea in https://arquihub.vercel.app/.
+      <br /> 
+      If you have any questions please contact me to my email:
+      <br /> 
+      balbiano06@gmail.com
+      <br /> 
+      Thanks for your time! 
+      <br /> 
+      Apasionado por la tecnología, creativo y con ideas
+      innovadoras. Facilidad para liderar grupos y mejorar el rendimiento de los
+      mismos. Me apasionan también los videojuegos y estoy abierto a aprender
+      cualquier tipo de actividad relacionada. Siento que estoy realizando una
+      idea única en https://arquihub.vercel.app/.
+      <br />
+      Ante cualquier consulta mi email
+      es: 
+      <br />
+      balbiano06@gmail.com 
+      <br /> 
+      Gracias por tu tiempo!
+    </h3>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h3>Tech skills</h3>
+    <ul>
+        <li>nodeJs</li>
+        <li>CSS</li>
+        <li>Html</li>
+        <li>Express</li>
+        <li>React</li>
+        <li>Redux</li>
+        <li>PostgreSQL</li>
+        <li>Sequelize</li>
+        <li>MongoDB</li>
+        <li>ReactNative</li>
+        <li>Tailwind</li>
+    </ul>
+  </div>
