--- a/profile.html
+++ b/profile.html
@@ -36,17 +36,5 @@
   </div>
   <div>
     <h3>Tech skills</h3>
-    <ul>
-        <li>nodeJs</li>
-        <li>CSS</li>
-        <li>Html</li>
-        <li>Express</li>
-        <li>React</li>
-        <li>Redux</li>
-        <li>PostgreSQL</li>
-        <li>Sequelize</li>
-        <li>MongoDB</li>
-        <li>ReactNative</li>
-        <li>Tailwind</li>
-    </ul>
+    <h3>nodeJS | CSS | HTML | Express | React | Redux | PostgreSQL | Sequelize | MongoDB | ReactNative | Tailwind</h3>
   </div>
